# multiweatherapi

./: .env_template  .gitignore  LICENSE  README.md  get_sample_data.py  pyproject.toml  requirements.txt  setup.cfg
doc/: campbell.md  davis.md  rainwise.md  zentra.md
docs/: MWAPI Error Handling.md  Test Suite Doco.md  campbell.md  conf.py  davis.md  get_sample_data.md  index.rst  onset.md  packaging_python_projects.md  rainwise.md  spectrum.md  src.multiweatherapi.rst  src.rst  zentra.md
docs/_build/: .buildinfo  genindex.html  get_sample_data.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  src.multiweatherapi.html  tests.html
docs/_build/.doctrees/: environment.pickle  get_sample_data.doctree  index.doctree  modules.doctree  src.doctree  src.multiweatherapi.doctree  tests.doctree
docs/_build/_sources/: get_sample_data.rst.txt  modules.rst.txt  tests.rst.txt
src/multiweatherapi/: campbell.py  davis.py  multiweatherapi.py  onset.py  rainwise.py  sample_report.py  spectrum.py  utilities.py  zentra.py
src/tests/: test_onset.py
tests/: conftest.py  test_campbell.py  test_davis.py  test_multiweather_request.py  test_onset.py  test_rainwise.py  test_spectrum.py  test_zentra.py
