[metadata]
name = multiweatherapi
version = 0.0.7
author = Junhee Park
author_email = jhp@msu.edu
description = Python bindings to multiple weather station vendor APIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.msu.edu/adsdatascience/multiweatherapi
project_urls =
    Bug Tracker = https://gitlab.msu.edu/adsdatascience/multiweatherapi/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    requests
python_requires = >=3.6

[options.packages.find]
where = src
